; ModuleID = '/home/carl/AnghaBench/php-src/sapi/embed/extr_php_embed.c_php_embed_flush.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/embed/extr_php_embed.c_php_embed_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@EOF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @php_embed_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @php_embed_flush(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @stdout, align 4
  %4 = call i64 @fflush(i32 %3)
  %5 = load i64, i64* @EOF, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @php_handle_aborted_connection()
  br label %9

9:                                                ; preds = %7, %1
  ret void
}

declare dso_local i64 @fflush(i32) #1

declare dso_local i32 @php_handle_aborted_connection(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
